test/expected/explain_a4f_i.out
explain int (f[4])()
             ^
14: error: array of function is illegal; did you mean array of pointer to function?
